# shape

./: .gitignore  .shaperc.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.shape/: README.md
.shape/bet/: 001-betting-and-building.md
.shape/bets/: 002-tracking-and-shipping.md  003-pitch-lifecycle.md
.shape/hill/: 001.jsonl  002.jsonl  003.jsonl
.shape/pitch/: betting-and-building.md  pitch-lifecycle.md  tracking-and-shipping.md
.shape/pitches/: betting-and-building.md  pitch-lifecycle.md
.shape/scope/001/: bet-command.md  bets-command.md  build-command.md  scope-command.md
.shape/scope/002/: gates.md  hill-and-status.md
.shape/scopes/002/: cooldown-and-derisk.md
.shape/scopes/003/: list-show-ready.md
docs/: PRODUCT.md
skills/use-shape/: SKILL.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  slug.rs  workspace.rs
src/commands/: accept.rs  bet.rs  bets.rs  build.rs  completions.rs  cooldown.rs  derisk.rs  hill.rs  init.rs  mod.rs  pitch.rs  scope.rs  ship.rs  status.rs  stop.rs
